Legalize mhlo.reduce window to tfl
* Add op view for reduce window
* Move some of the conv view logic into common file to be shared
* Add new pattern that makes all reduce_window NHWC in prepare
* Migrate average pool lowering to mhlo->tfl, use new op view, lots of cleanups

The pattern to transpose reduce windows needs to go at the same time as the avg pool legalizations. This is because inserting the transposes will disrupt the mhlo->tf path, but that logic is covered in the new legalization.

PiperOrigin-RevId: 654534001

--- a/tensorflow/compiler/mlir/lite/stablehlo/transforms/legalize_hlo_conversions/BUILD
+++ b/tensorflow/compiler/mlir/lite/stablehlo/transforms/legalize_hlo_conversions/BUILD
@@ -20,9 +20,7 @@ cc_library(
     deps = [
         "//tensorflow/compiler/mlir/lite:tensorflow_lite",
         "//tensorflow/compiler/mlir/tensorflow",
-        "@com_google_absl//absl/algorithm:container",
         "@llvm-project//llvm:Support",
-        "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TransformUtils",
@@ -58,6 +56,7 @@ cc_library(
         "reduce.h",
     ],
     deps = [
+        ":util",
         "//tensorflow/compiler/mlir/lite:tensorflow_lite",
         "//tensorflow/compiler/mlir/lite/stablehlo:hlo_matchers",
         "//tensorflow/compiler/mlir/tensorflow",
@@ -140,6 +139,7 @@ cc_library(
     srcs = ["conv_util.cc"],
     hdrs = ["conv_util.h"],
     deps = [
+        ":op_util_common",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Support",
@@ -168,6 +168,65 @@ cc_library(
     srcs = ["pad_util.cc"],
     hdrs = ["pad_util.h"],
     deps = [
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
+        "@local_xla//xla/mlir_hlo",
+    ],
+)
+
+cc_library(
+    name = "gather",
+    srcs = ["gather.cc"],
+    hdrs = ["gather.h"],
+    deps = [
+        ":util",
+        "//tensorflow/compiler/mlir/lite:tensorflow_lite",
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
+        "@llvm-project//mlir:TransformUtils",
+        "@local_xla//xla/mlir_hlo",
+    ],
+)
+
+cc_library(
+    name = "reduce_window",
+    srcs = ["reduce_window.cc"],
+    hdrs = ["reduce_window.h"],
+    deps = [
+        ":conv_util",
+        ":op_util_common",
+        ":reduce_window_util",
+        ":util",
+        "//tensorflow/compiler/mlir/lite:tensorflow_lite",
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:ArithDialect",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
+        "@llvm-project//mlir:TransformUtils",
+        "@local_xla//xla/mlir_hlo",
+    ],
+)
+
+cc_library(
+    name = "op_util_common",
+    srcs = ["op_util_common.cc"],
+    hdrs = ["op_util_common.h"],
+    deps = [
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
+    ],
+)
+
+cc_library(
+    name = "reduce_window_util",
+    srcs = ["reduce_window_util.cc"],
+    hdrs = ["reduce_window_util.h"],
+    deps = [
+        ":op_util_common",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:Support",
