--- a/tensorflow/lite/python/optimize/BUILD
+++ b/tensorflow/lite/python/optimize/BUILD
@@ -53,6 +53,7 @@ pybind_extension(
         ":calibration_wrapper_lib",
         "//tensorflow/lite:framework",
         "//tensorflow/lite/core:framework_stable",
+        "//tensorflow/lite/delegates/flex:delegate",
         "//tensorflow/python/lib/core:pybind11_lib",
         "//third_party/python_runtime:headers",
         "@pybind11",
@@ -93,6 +94,7 @@ py_strict_test(
         "//third_party/py/numpy",
         "//tensorflow:tensorflow_py_no_contrib",
         "//tensorflow/lite/python:lite",
+        "//tensorflow/lite/python:pywrap_tflite",
         "//tensorflow/lite/python:schema_py",
         "//tensorflow/lite/tools:flatbuffer_utils",
         "//tensorflow/python/framework:dtypes",
